01. Introducción al curso y primera demo

--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,47 @@ main > * {
   padding: 10px;
   font-size: 3em;
 }
+
+/* Definimos el GRID container */
+main {
+  display: grid;
+  row-gap: 10px;
+  column-gap: 10px;
+  grid-template-areas: 
+    "header"
+    "izquierda"
+    "contenido"
+    "derecha"
+    "footer";
+}
+
+/* Desktop */
+@media (min-width: 600px) {
+  main {
+    grid-template-areas:
+      "header header header"
+      "izquierda contenido derecha"
+      "footer footer .";
+  }
+}
+
+/* Nombramos los elementos */
+header {
+  grid-area: header;
+}
+
+aside:first-of-type {
+  grid-area: izquierda;
+}
+
+article {
+  grid-area: contenido;
+}
+
+aside:last-of-type {
+  grid-area: derecha;
+}
+
+footer {
+  grid-area: footer;
+}
